package au.com.codeka.warworlds.common.proto;

import "common.proto";

// Represents a user. A user can be associated with multiple devices, but only a single empire.
message User {
  optional int64 id = 1;
}


// Contains details about a device, such as it's ID, model etc. Also contains details about the
// device's GCM registration (so we can send it GCM messages).
message DeviceInfo {
  // Unique identifier for this particular registration.
  optional int64 id = 1;

  // The identifier of the device. You can have multiple accounts on one device, this
  // will then refer to the device itself.
  optional string device_id = 2;

  // The identifier of the GCM registration. When you complete the GCM registration
  // process, you'll need to update this to include the GCM registration ID so that
  // we can send you notifications.
  optional string gcm_registration_id = 3;

  // The value of android.os.Build.MODEL for this device
  optional string device_model = 4;

  // The value of android.os.Build.MANUFACTURER for this device
  optional string device_manufacturer = 5;

  // The value of android.os.Build.DISPLAY for this device
  optional string device_build = 6;

  // The value of android.os.Build.VERSION.RELEASE for this device (note that this can
  // change if you upgrade the OS without re-registering your device!)
  optional string device_version = 7;

  // If set, this is the user that the device belongs to.
  optional int64 user_id = 8;
}
