package au.com.codeka.warworlds.server.handlers;

import java.sql.Statement;

import org.joda.time.DateTime;

import au.com.codeka.common.protobuf.DeviceOnlineStatus;
import au.com.codeka.common.protobuf.DeviceRegistration;
import au.com.codeka.warworlds.server.RequestException;
import au.com.codeka.warworlds.server.RequestHandler;
import au.com.codeka.warworlds.server.data.DB;
import au.com.codeka.warworlds.server.data.SqlStmt;

public class DevicesHandler extends RequestHandler {

    @Override
    protected void post() throws RequestException {
        DeviceRegistration registration = getRequestBody(DeviceRegistration.class);

        Long id = null;
        try(SqlStmt sql = DB.prepare(
                "SELECT id FROM devices WHERE device_id=? AND user_email=?")) {
            sql.setString(1, registration.device_id);
            sql.setString(2, getSession().getEmail());
            id = sql.selectFirstValue(Long.class);
        } catch (RequestException e) {
            throw e;
        } catch (Exception e) {
            throw new RequestException(e);
        }

        String stmt;
        if (id == null) {
            stmt = "INSERT INTO devices (device_id, user_email, device_model, device_manufacturer, device_build, device_version) VALUES (?, ?, ?, ?, ?, ?)";
        } else {
            stmt = "UPDATE devices SET device_id=?, user_email=?, device_model=?, device_manufacturer=?, device_build=?, device_version=? WHERE id=?";
        }

        try (SqlStmt sql = DB.prepare(stmt, Statement.RETURN_GENERATED_KEYS)) {
            sql.setString(1, registration.device_id);
            sql.setString(2, getSession().getEmail());
            sql.setString(3, registration.device_model);
            sql.setString(4, registration.device_manufacturer);
            sql.setString(5, registration.device_build);
            sql.setString(6, registration.device_version);
            if (id != null) {
                sql.setInt(7, (int) (long) id);
            }
            sql.update();
            if (id == null) {
                id = (long) sql.getAutoGeneratedID();
            }

            setResponseBody(new DeviceRegistration.Builder()
                                .key(id.toString())
                                .build());
        } catch (Exception e) {
            throw new RequestException(e);
        }
    }

    @Override
    protected void put() throws RequestException {
        String strid = getUrlParameter("id");
        if (strid == null || strid.isEmpty()) {
            throw new RequestException(400);
        }
        int id = Integer.parseInt(strid);

        String onlineStatusParameterValue = getRequest().getParameter("online_status");
        if (onlineStatusParameterValue != null && onlineStatusParameterValue.equals("1")) {
            DeviceOnlineStatus device_online_status_pb = getRequestBody(DeviceOnlineStatus.class);

            try (SqlStmt sql = DB.prepare("UPDATE devices SET online_since=? WHERE id=? AND user_email=?")) {
                if (device_online_status_pb.is_online) {
                    sql.setDateTime(1, DateTime.now());
                } else {
                    sql.setNull(1);
                }
                sql.setInt(2, id);
                sql.setString(3, getSession().getEmail());
                sql.update();
            } catch (Exception e) {
                throw new RequestException(e);
            }
        } else {
            DeviceRegistration device_registration_pb = getRequestBody(DeviceRegistration.class);

            try (SqlStmt sql = DB.prepare("UPDATE devices SET gcm_registration_id=? WHERE id=? AND user_email=?")) {
                sql.setString(1, device_registration_pb.gcm_registration_id);
                sql.setInt(2, id);
                sql.setString(3, getSession().getEmail());
                sql.update();
            } catch (Exception e) {
                throw new RequestException(e);
            }
        }
    }

    @Override
    protected void delete() throws RequestException {
        int id = Integer.parseInt(getUrlParameter("id"));

        try (SqlStmt sql = DB.prepare("DELETE FROM devices WHERE id=? and user_email=?")) {
            sql.setInt(1, id);
            sql.setString(2, getSession().getEmail());
            sql.update();
        } catch (Exception e) {
            throw new RequestException(e);
        }
    }
}
